--- a/COSC360_M3/css/exploreStyle.css
+++ b/COSC360_M3/css/exploreStyle.css
@@ -1,38 +1,5 @@
-
-/* changes the bkg colour of the header and sets the "iblogs" text to 
-be in the center of the header */
-/* header {
-    background-color: #f4e5ce;
-    padding: 0.625em;
-    text-align: center;
-} */
-
-/* styles the menu for the login and sign up buttons
-on the RHS with no bullet points */
-/* nav ul {
-    list-style: none;
-    display: flex;
-    justify-content: right;
-} */
-
-/* moves the menu with the login and sign up buttons to the right*/
-/* nav li {
-    margin-right: 0.9375em;
-} */
-
-/* sets the menu items login and sign up to be black font */
-/* nav a{
-    color:black;
-} */
-
-/* removes the underline from the menu links when visited, 
-hovered over, or active */
-/* nav a:link, a:visited, a:hover, a:active { 
-    text-decoration: none; 
-}  */
-
 /* Stying for the search bar on the page */
-.mainSearch input{
+/* .mainSearch input{
     width: 60%;
     padding: 0.625em;
     border-radius: 0.625em;
@@ -41,14 +8,29 @@ hovered over, or active */
     background-color:#f8f5ee;
     font-family: 'Montserrat';
 }
-
 /* puts the search bar in a flex grid and moves it to the center,
 also adds padding from the header */
-.mainSearch{
+/* .mainSearch{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     padding-top: 2.5em;
+} */
+
+.mainSearch input{
+    width: 60%;
+    padding: 0.5em;
+    border-radius: 12px;
+    border-color: #D3C1AB;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.searchForm{
+    display: flex;
+    padding-top: 1.5em;
+    justify-content: center;
 }
 
 /* sets all h1's to be in font Aboreto */
@@ -79,14 +61,36 @@ section[id="categorySection"]{
     width: 12.5em;
     margin: 1.3em 0.625em;
     border-radius: 0.9375em;
+    position: relative;
     overflow: hidden;
 }
 
 /* same as above */
 .category img {
-    width: 100%;
+    /* width: 100%; */
+    /* height: auto; */
+    max-width: 100%;
     height: auto;
+    display: block;
 }
+
+.category::after {
+    content: attr(data-title);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 5px 10px;
+    font-size: 14px;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  }
+  
+  .category:hover::after {
+    opacity: 1;
+  }
 
 /* creates the flex grid layout for the user post section */
 section#userPostSection{
@@ -103,6 +107,9 @@ section#userPostSection{
 .userPostColumn1, .userPostColumn2 {
     box-sizing: border-box;
     padding: 0 0.25em;
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
 }
 
 /* sets the images for the user posts and adds some styling */
@@ -111,21 +118,36 @@ section#userPostSection{
     margin: 0.625em 0.625em;
     border-radius: 15px;
     overflow: hidden;
+    padding: 10px; /* Updated padding */
+    margin-bottom: 20px;
+    background-color: #F9EDE2;
 }
 
-/* same as above */
-.userPosts img {
+.interestContainer {
+    position: relative;
     width: 100%;
-    height: auto;
+    padding-top: 75%; /* 150/200 aspect ratio */
+    overflow: hidden;
+}
+.interestContainer img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
-/* moves footer text content to the center and changes 
-the bkg colour of the footer*/
-footer {
-    text-align: center;
-    padding: 1.25em;
-    background-color: #f4e5ce;
+.exploreSearchButton{
+    font-family: 'Montserrat' !important;
+    font-weight: 900 !important;
+    border: none !important;
+    font-size: 0.75em !important;
+    background: #D3C1AB !important;
+    margin-left: 0.25em;
+    border-radius: 12px;
 }
+
 
 /* ----------------------------------------------------------------- */
 
