--- a/COSC360_M3/css/adminMain.css
+++ b/COSC360_M3/css/adminMain.css
@@ -83,6 +83,21 @@ body {
     box-sizing: border-box; /* Include padding and border in the element's total width and height */
 }
 
+.adminBackButton{
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #f4e5ce;
+    color: black;
+    text-decoration: none;
+    border-radius: 5px;
+    margin-top: 10px; 
+    margin-left: 1em;
+}
+
+.adminBackButton:hover {
+    background-color: #D3C1Ab;
+}
+
 
 /* Ensure that the footer text content is centered and set the background color */
 footer {
@@ -125,5 +140,15 @@ footer {
     /* Adjust padding for table cells in usersOnPlatform for mobile */
     .usersOnPlatform table td {
         padding: 0.5em; /* Adjust padding for mobile */
+    }
+
+    .adminBackButton{
+        display: inline-block;
+        padding: 10px 20px;
+        background-color: #f4e5ce;
+        color: black;
+        text-decoration: none;
+        border-radius: 5px;
+        margin-top: 10px;
     }
 }
