--- a/COSC360_M3/css/exploreStyle.css
+++ b/COSC360_M3/css/exploreStyle.css
@@ -160,6 +160,21 @@ section#userPostSection{
     border-radius: 12px;
 }
 
+.backButton{
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #f4e5ce;
+    color: black;
+    text-decoration: none;
+    border-radius: 5px;
+    margin-top: 10px; 
+    margin-left: 1em;
+}
+
+.backButton:hover {
+    background-color: #D3C1Ab;
+}
+
 
 /* ----------------------------------------------------------------- */
 
@@ -193,6 +208,17 @@ section#userPostSection{
 
     .userPosts {
         width: 95%; /* Adjusting width for mobile */
+    }
+
+    .backButton{
+        display: inline-block;
+        padding: 10px 20px;
+        background-color: #f4e5ce;
+        color: black;
+        text-decoration: none;
+        border-radius: 5px;
+        margin-top: 10px; 
+        margin-left: 4em;
     }
 
 } /* End Media Query */
